<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/view_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="146sp"
        android:layout_marginBottom="505sp"
        android:scaleType="centerInside"
        tools:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="250sp"
        android:text="@string/display_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/person_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/current_user_status"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/view_person_totalFrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/total_friend"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp" />

    <Button
        android:id="@+id/send_friend_requestBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view_person_totalFrd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send_friend_request"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/decline_friend_request"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_friend_requestBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/decline_friend_request"
        android:textColor="@android:color/white" />

</RelativeLayout>