<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChattingFragment">

    <include
        android:id="@+id/chat_app_bar"
        layout="@layout/app_bar_layout" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_message_layout"
        android:layout_width="match_parent"
        android:layout_height="549dp"
        android:layout_below="@id/chat_app_bar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_marginBottom="1dp"
        android:background="#44DAD7B8">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_of_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/chat_app_bar"
            android:layout_alignParentStart="true">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/chat_add_btn"
            android:layout_width="63dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/white"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_add"
            android:contentDescription="@string/textview"/>


        <EditText
            android:id="@+id/chat_message_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/enter_message"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="14dp"
            android:paddingRight="10dp"
            android:paddingBottom="12dp"
            android:autofillHints="@string/textview"
            android:textColorHint="@color/common_google_signin_btn_text_light_default" />


        <ImageButton
            android:id="@+id/chat_send_btn"
            android:layout_width="69dp"
            android:layout_height="51dp"
            android:layout_marginBottom="1sp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@android:color/white"
            android:contentDescription="@string/chat_button"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>
</RelativeLayout>
